@@ -338,7 +338,7 @@ if [ -z "${FLINK_ENV_JAVA_OPTS}" ]; then
     JAVA_SPEC_VERSION=`"${JAVA_RUN}" -XshowSettings:properties 2>&1 | grep "java.specification.version" | cut -d "=" -f 2 |  tr -d '[:space:]'`
     if [ "$JAVA_SPEC_VERSION" == "21" ]; then
       # set security manager property to allow calls to System.setSecurityManager() at runtime
-      FLINK_ENV_JAVA_OPTS="$FLINK_ENV_JAVA_OPTS -Djava.security.manager=allow"
+      FLINK_ENV_JAVA_OPTS="$FLINK_ENV_JAVA_OPTS -Djava.security.SecurityManager=allow"
     fi
 fi
 
